# Autodiff-Ocaml

./: Design.md  README.md  computation_graph.dot  design.md  dune  errors.mli  readme  reverse_differentiation.ml  tensor.mli  variable.ml  vis.ml
client/: index.html
demo/: dune
demo/bigarray/: bigarray.ml  dune
demo/dream/: dream_demo.ml  dune
demo/graph_graphics/: demo.ml
examples/: basic.ml  dune  hod.ml  large.ml  neural_network.ml  nn.ml  printed.ml  printed_table.ml  simple.ml  visualize.ml
lib/: expressions.ml  main.mli
old/src/: autodiff.opam
old/src/demo/graph_graphics/: dune
old/src/demo/plot/: dune  plot.ml
old/src/examples/: dune  hod.ml  nn.ml  simple.ml
old/src/lib/: optimizer.ml  reverse_differentiation.ml  tensor.ml  tensor.mli  visualize.mli
old/src/test/: tensor_tests.ml  variable_tests.ml
src/: main.ml  main.mli
src/lib/: ad.mli  control_flow.ml  control_flow.mli  differentiation.mli  dune  errors.ml  errors.mli  forward_differentiation.ml  forward_differentiation.mli  function.mli  op.mli  optimize.mli  optimizer.mli  parser.ml  reverse_differentiation.ml  reverse_differentiation.mli  tensor.ml  tensor.mli  tensor_node.ml  variable.ml  variable.mli  visualize.mli
test/: dune  misc_tests.ml  tensor_tests.ml  variable_tests.ml
