(rule
 (target project.zip)
 (deps
  bin/main.ml
  bin/dune
  src/lib/ad.mli
  src/lib/control_flow.mli
  src/lib/forward_differentiation.mli
  src/lib/errors.mli
  src/lib/function.mli
  src/lib/optimize.mli
  src/lib/tensor.mli
  src/lib/variable.mli
  src/lib/dune
  test/dune)
 (action
  (run zip -R project.zip %{deps})))
