(rule
 (target project.zip)
 (deps
  src/lib/ad.mli
  src/lib/forward_differentiation.mli
  src/lib/reverse_differentiation.mli
  src/lib/optimizer.mli
  src/lib/tensor.mli
  src/lib/variable.mli
  src/lib/dune
  test/dune
  
  examples/simple.ml
  examples/nn.ml
  examples/hod.ml
  )
 (action
  (run zip -R project.zip %{deps})))
