(executable
 (public_name simple)
 (name simple)
 (modules simple)
 (libraries core variable))

(executable
 (public_name nn)
 (name nn)
 (modules nn)
 (libraries core variable))

(executable
 (public_name large)
 (name large)
 (modules large)
 (libraries core variable))

(executable
 (public_name basic)
 (name basic)
 (modules basic)
 (libraries core tensor))

 (executable
 (public_name visualize)
 (name visualize)
 (modules visualize)
 (libraries core variable)) 

 (executable
 (public_name printed_table)
 (name printed_table)
 (modules printed_table)
 (libraries core variable))