(library
 (name ad)
 (modules ad forward_differentiation errors optimize)
 (modules_without_implementation optimize forward_differentiation))

(library
 (name reverse_differentiation)
 (modules reverse_differentiation)
 (libraries tensor variable))

(library
 (name tensor)
 (modules tensor))

(library
 (name variable)
 (modules variable)
 (libraries tensor))
