(library
 (name ad)
 (modules ad forward_differentiation optimize)
 (modules_without_implementation optimize))

(library
 (name reverse_differentiation)
 (modules reverse_differentiation)
 (libraries tensor variable))

(library
 (name tensor)
 (modules tensor)
 (libraries core variable))

(library
 (name variable)
 (modules variable))
